src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Session</label>
        <referenceTo>Group_Session__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attendance</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>